--- a/app/src/main/res/layout/activity_game_protect.xml
+++ b/app/src/main/res/layout/activity_game_protect.xml
@@ -74,8 +74,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            app:kswTextOff="Off"
-            app:kswTextOn="On"
+            app:kswTextOff="off"
+            app:kswTextOn="on"
             app:kswTintColor="@color/white"
             app:kswBackDrawable="@drawable/ios_back_drawable"
             android:textColor="@color/custom_text_state_color"
@@ -118,8 +118,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            app:kswTextOff="Off"
-            app:kswTextOn="On"
+            app:kswTextOff="off"
+            app:kswTextOn="on"
             app:kswTintColor="@color/white"
             app:kswBackDrawable="@drawable/ios_back_drawable"
             android:textColor="@color/custom_text_state_color"
