--- a/app/src/main/res/layout/activity_security_protect.xml
+++ b/app/src/main/res/layout/activity_security_protect.xml
@@ -93,8 +93,8 @@
             android:textColor="@color/custom_text_state_color"
             android:textSize="16dp"
             app:kswBackDrawable="@drawable/ios_back_drawable"
-            app:kswTextOff="Off"
-            app:kswTextOn="On"
+            app:kswTextOff="off"
+            app:kswTextOn="on"
             app:kswTintColor="@color/white" />
     </RelativeLayout>
     <RelativeLayout
@@ -139,8 +139,8 @@
             android:textColor="@color/custom_text_state_color"
             android:textSize="16dp"
             app:kswBackDrawable="@drawable/ios_back_drawable"
-            app:kswTextOff="Off"
-            app:kswTextOn="On"
+            app:kswTextOff="off"
+            app:kswTextOn="on"
             app:kswTintColor="@color/white" />
     </RelativeLayout>
     <RelativeLayout
@@ -185,8 +185,8 @@
             android:textColor="@color/custom_text_state_color"
             android:textSize="16dp"
             app:kswBackDrawable="@drawable/ios_back_drawable"
-            app:kswTextOff="Off"
-            app:kswTextOn="On"
+            app:kswTextOff="off"
+            app:kswTextOn="on"
             app:kswTintColor="@color/white" />
     </RelativeLayout>
     <RelativeLayout
@@ -231,8 +231,8 @@
             android:textColor="@color/custom_text_state_color"
             android:textSize="16dp"
             app:kswBackDrawable="@drawable/ios_back_drawable"
-            app:kswTextOff="Off"
-            app:kswTextOn="On"
+            app:kswTextOff="off"
+            app:kswTextOn="on"
             app:kswTintColor="@color/white" />
     </RelativeLayout>
     <RelativeLayout
@@ -277,8 +277,8 @@
             android:textColor="@color/custom_text_state_color"
             android:textSize="16dp"
             app:kswBackDrawable="@drawable/ios_back_drawable"
-            app:kswTextOff="Off"
-            app:kswTextOn="On"
+            app:kswTextOff="off"
+            app:kswTextOn="on"
             app:kswTintColor="@color/white" />
     </RelativeLayout>
 </LinearLayout>
