--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -25,8 +25,10 @@
             android:textColor="@color/text_title"
             android:textSize="@dimen/title" />
         <TextView
+            android:id="@+id/add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="5dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
@@ -39,10 +41,110 @@
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:paddingBottom="30dp"
+        android:background="@color/white"
+        android:paddingLeft="@dimen/left"
+        android:paddingRight="@dimen/right">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/sdv1"
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:layout_marginTop="50dp"
+                android:background="@mipmap/tou2" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/text06"
+                android:textSize="12sp"
+                android:text="李四" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/text06"
+                android:textSize="12sp"
+                android:text="132****8723" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/sdv2"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@mipmap/tou" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/text05"
+                android:textSize="14sp"
+                android:text="张三" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text05"
+                android:textSize="14sp"
+                android:layout_marginTop="5dp"
+                android:text="132****8723" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/sdv3"
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:layout_marginTop="50dp"
+                android:background="@mipmap/tou2" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/text06"
+                android:textSize="12sp"
+                android:text="王五" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/text06"
+                android:textSize="12sp"
+                android:text="132****8723" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -128,18 +230,18 @@
                 android:textSize="@dimen/text01" />
 
             <com.example.duan.duan.DCZ_selft.SwitchButton
-                android:id="@+id/button2"
+                android:id="@+id/button1"
                 style="@style/SwitchButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:checked="true"
+                android:enabled="false"
                 android:textColor="@color/custom_text_state_color"
                 android:textSize="16dp"
                 app:kswBackDrawable="@drawable/ios_back_drawable"
-                app:kswTextOff="Off"
-                app:kswTextOn="On"
+                app:kswTextOff="off"
+                app:kswTextOn="on"
                 app:kswTintColor="@color/white" />
         </RelativeLayout>
 
@@ -169,19 +271,20 @@
                 android:textSize="@dimen/text01" />
 
             <com.example.duan.duan.DCZ_selft.SwitchButton
-                android:id="@+id/button3"
+                android:id="@+id/button2"
                 style="@style/SwitchButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:checked="true"
                 android:textColor="@color/custom_text_state_color"
                 android:textSize="16dp"
+                android:enabled="false"
                 app:kswBackDrawable="@drawable/ios_back_drawable"
-                app:kswTextOff="Off"
-                app:kswTextOn="On"
-                app:kswTintColor="@color/white" />
+                app:kswTextOff="off"
+                app:kswTextOn="on"
+                app:kswTintColor="@color/white"
+                android:layout_alignBottom="@+id/iv3"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
         </RelativeLayout>
 
         <RelativeLayout
