--- a/app/src/main/res/layout/activity_wallet_protect.xml
+++ b/app/src/main/res/layout/activity_wallet_protect.xml
@@ -73,8 +73,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            app:kswTextOff="Off"
-            app:kswTextOn="On"
+            app:kswTextOff="off"
+            app:kswTextOn="on"
             app:kswTintColor="@color/white"
             app:kswBackDrawable="@drawable/ios_back_drawable"
             android:textColor="@color/custom_text_state_color"
@@ -123,8 +123,8 @@
             android:textColor="@color/custom_text_state_color"
             android:textSize="16dp"
             app:kswBackDrawable="@drawable/ios_back_drawable"
-            app:kswTextOff="Off"
-            app:kswTextOn="On"
+            app:kswTextOff="off"
+            app:kswTextOn="on"
             app:kswTintColor="@color/white" />
     </RelativeLayout>
 </LinearLayout>
