--- a/app/src/main/res/layout/activity_change_phone3.xml
+++ b/app/src/main/res/layout/activity_change_phone3.xml
@@ -48,18 +48,14 @@
             android:orientation="vertical"
             android:gravity="center_horizontal"
             android:layout_weight="1">
-            <RelativeLayout
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/rl_zheng"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:background="@drawable/yuanjiaohui">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@mipmap/jia"/>
-            </RelativeLayout>
+                android:background="@mipmap/shenfenzheng">
+            </com.facebook.drawee.view.SimpleDraweeView>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -75,18 +71,14 @@
             android:layout_marginLeft="10dp"
             android:gravity="center_horizontal"
             android:layout_weight="1">
-            <RelativeLayout
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/rl_fan"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:background="@drawable/yuanjiaohui">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@mipmap/jia"/>
-            </RelativeLayout>
+                android:background="@mipmap/shenfenzheng">
+            </com.facebook.drawee.view.SimpleDraweeView>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -103,16 +95,12 @@
             android:gravity="center_horizontal"
             android:layout_weight="1">
             <RelativeLayout
+                android:id="@+id/rl_shou"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:background="@drawable/yuanjiaohui">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@mipmap/jia"/>
+                android:background="@mipmap/shenfenzheng">
             </RelativeLayout>
             <TextView
                 android:layout_width="wrap_content"
@@ -135,11 +123,15 @@
             android:id="@+id/city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="+86 中国"/>
+            android:paddingLeft="15dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingRight="5dp"
+            android:text="+86 "/>
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:src="@mipmap/xia"/>
         <View
             android:layout_width="2dp"
             android:layout_height="match_parent"
@@ -149,6 +141,7 @@
             android:background="@color/bg2">
         </View>
         <EditText
+            android:id="@+id/edit"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
@@ -169,14 +162,16 @@
             android:id="@+id/button_hui"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="下一步"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:text="确定"
             android:layout_marginTop="15dp"
             android:background="@drawable/yuanjiaohui"
             android:gravity="center"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:textSize="@dimen/title"
-            android:textColor="@color/text05"/>
+            android:textColor="@color/white"/>
         <TextView
             android:id="@+id/button"
             android:layout_width="match_parent"
