--- a/app/src/main/res/layout/activity_city_list.xml
+++ b/app/src/main/res/layout/activity_city_list.xml
@@ -59,5 +59,11 @@
         android:layout_height="1dp"
         android:background="@color/xian1">
     </View>
-
+    <ListView
+        android:id="@+id/lv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none"
+        android:divider="@null">
+    </ListView>
 </LinearLayout>
