--- a/app/src/main/res/layout/item_footprints3.xml
+++ b/app/src/main/res/layout/item_footprints3.xml
@@ -26,13 +26,13 @@
     </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginLeft="10dp"
         android:paddingLeft="15dp"
         android:layout_marginTop="10dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="@color/white">
+        android:background="@mipmap/duihua">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
