--- a/app/src/main/res/layout/activity_change_phone3.xml
+++ b/app/src/main/res/layout/activity_change_phone3.xml
@@ -1,190 +1,272 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg1"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.duan.duan.DCZ_activity.ChangePhone3Activity">
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:background="@color/bg_title2"/>
-    <RelativeLayout
-        style="@style/Title"
-        android:background="@color/bg_title2">
-        <include
-            android:id="@+id/back"
-            layout="@layout/layout_back2" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:background="@color/bg_title2"/>
+        <RelativeLayout
+            style="@style/Title"
+            android:background="@color/bg_title2">
+            <include
+                android:id="@+id/back"
+                layout="@layout/layout_back2" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="更换密保手机"
+                android:textColor="@color/text_title2"
+                android:textSize="@dimen/title" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/xian"
+                android:background="@color/xian1"
+                android:layout_alignParentBottom="true"/>
+        </RelativeLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="更换密保手机"
-            android:textColor="@color/text_title2"
-            android:textSize="@dimen/title" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/xian"
-            android:background="@color/xian1"
-            android:layout_alignParentBottom="true"/>
-    </RelativeLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:textColor="@color/text06"
-        android:textSize="@dimen/text01"
-        android:text="如果原密保手机已换号或不能接收到短信验证码，需提供一个能收验证码的新手机号和个人实名有效资料提交工作人员审核通过后才能更换新密保手机"/>
+            android:padding="20dp"
+            android:textColor="@color/text06"
+            android:textSize="@dimen/text01"
+            android:text="如果原密保手机已换号或不能接收到短信验证码，需提供一个能收验证码的新手机号和个人实名有效资料提交工作人员审核通过后才能更换新密保手机"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/left"
-        android:layout_marginRight="@dimen/left">
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center_horizontal"
-            android:layout_weight="1">
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:id="@+id/rl_zheng"
-                android:layout_width="match_parent"
-                android:layout_height="130dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@mipmap/shenfenzheng">
-            </com.facebook.drawee.view.SimpleDraweeView>
-            <TextView
-                android:layout_width="wrap_content"
+            android:layout_marginLeft="@dimen/left"
+            android:layout_marginRight="@dimen/left">
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="6dp"
-                android:textColor="@color/text05"
-                android:textSize="@dimen/text01"
-                android:text="身份证正面"/>
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_weight="1">
+
+                <com.facebook.drawee.view.SimpleDraweeView
+                    android:id="@+id/rl_zheng"
+                    android:layout_width="match_parent"
+                    android:layout_height="130dp"
+                    android:layout_weight="1"
+                    android:background="@mipmap/shenfenzheng"
+                    fresco:placeholderImageScaleType="fitCenter"
+                    android:gravity="center"
+                    fresco:roundBottomLeft="true"
+                    fresco:roundBottomRight="true"
+                    fresco:roundTopLeft="true"
+                    fresco:roundTopRight="true"
+                    fresco:roundedCornerRadius="5dp">
+                </com.facebook.drawee.view.SimpleDraweeView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="6dp"
+                    android:textColor="@color/text05"
+                    android:textSize="@dimen/text01"
+                    android:text="身份证正面"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="10dp"
+                android:gravity="center_horizontal"
+                android:layout_weight="1">
+                <com.facebook.drawee.view.SimpleDraweeView
+                    android:id="@+id/rl_fan"
+                    android:layout_width="match_parent"
+                    android:layout_height="130dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    fresco:placeholderImageScaleType="fitCenter"
+                    fresco:roundBottomLeft="true"
+                    fresco:roundBottomRight="true"
+                    fresco:roundTopLeft="true"
+                    fresco:roundTopRight="true"
+                    fresco:roundedCornerRadius="5dp"
+                    android:background="@mipmap/shenfenzheng">
+                </com.facebook.drawee.view.SimpleDraweeView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="6dp"
+                    android:textColor="@color/text05"
+                    android:textSize="@dimen/text01"
+                    android:text="身份证反面"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="10dp"
+                android:gravity="center_horizontal"
+                android:layout_weight="1">
+                <com.facebook.drawee.view.SimpleDraweeView
+                    android:id="@+id/rl_shou"
+                    android:layout_width="match_parent"
+                    android:layout_height="130dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    fresco:placeholderImageScaleType="fitCenter"
+                    fresco:roundBottomLeft="true"
+                    fresco:roundBottomRight="true"
+                    fresco:roundTopLeft="true"
+                    fresco:roundTopRight="true"
+                    fresco:roundedCornerRadius="5dp"
+                    android:background="@mipmap/shenfenzheng">
+                </com.facebook.drawee.view.SimpleDraweeView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="6dp"
+                    android:textColor="@color/text05"
+                    android:textSize="@dimen/text01"
+                    android:text="手持身份证"/>
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_horizontal"
-            android:layout_weight="1">
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:id="@+id/rl_fan"
-                android:layout_width="match_parent"
-                android:layout_height="130dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@mipmap/shenfenzheng">
-            </com.facebook.drawee.view.SimpleDraweeView>
+            android:layout_marginLeft="@dimen/left"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/yuanjiao"
+            android:gravity="center_vertical">
             <TextView
+                android:id="@+id/city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="6dp"
-                android:textColor="@color/text05"
-                android:textSize="@dimen/text01"
-                android:text="身份证反面"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_horizontal"
-            android:layout_weight="1">
-            <RelativeLayout
-                android:id="@+id/rl_shou"
-                android:layout_width="match_parent"
-                android:layout_height="130dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@mipmap/shenfenzheng">
-            </RelativeLayout>
-            <TextView
+                android:paddingLeft="15dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:paddingRight="5dp"
+                android:text="+86 "/>
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="6dp"
+                android:src="@mipmap/xia"/>
+            <View
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/bg2">
+            </View>
+            <EditText
+                android:id="@+id/edit"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:hint="请输入新绑定的手机号码"
+                android:singleLine="true"
                 android:textColor="@color/text05"
-                android:textSize="@dimen/text01"
-                android:text="手持身份证"/>
+                android:textColorHint="@color/text06"
+                android:textCursorDrawable="@null"
+                android:textSize="@dimen/text01" />
         </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
+            <TextView
+                android:id="@+id/button_hui"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:text="确定"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/yuanjiaohui"
+                android:gravity="center"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:textSize="@dimen/title"
+                android:textColor="@color/white"/>
+            <TextView
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:text="确定"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/yuanjiaolan2"
+                android:gravity="center"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:textSize="@dimen/title"
+                android:textColor="@color/white"/>
+        </RelativeLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/left"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/yuanjiao"
-        android:gravity="center_vertical">
-        <TextView
-            android:id="@+id/city"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="15dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingRight="5dp"
-            android:text="+86 "/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/xia"/>
-        <View
-            android:layout_width="2dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/bg2">
-        </View>
-        <EditText
-            android:id="@+id/edit"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:background="@null"
-            android:hint="请输入新绑定的手机号码"
-            android:singleLine="true"
-            android:textColor="@color/text05"
-            android:textColorHint="@color/text06"
-            android:textCursorDrawable="@null"
-            android:textSize="@dimen/text01" />
-    </LinearLayout>
+
     <RelativeLayout
+        android:id="@+id/pup"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
-        <TextView
-            android:id="@+id/button_hui"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="#80000000">
+        <LinearLayout
+            android:id="@+id/pup2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:text="确定"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/yuanjiaohui"
-            android:gravity="center"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:textSize="@dimen/title"
-            android:textColor="@color/white"/>
-        <TextView
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:text="确定"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/yuanjiaolan2"
-            android:gravity="center"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:textSize="@dimen/title"
-            android:textColor="@color/white"/>
+            android:layout_alignParentBottom="true"
+            android:visibility="gone"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/btn_camera"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#E8E8E8"
+                android:gravity="center"
+                android:text="拍照"
+                android:textColor="#1079FF"
+                android:textSize="18sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="#C9C9CB" />
+
+            <TextView
+                android:id="@+id/btn_photo"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#E8E8E8"
+                android:gravity="center"
+                android:text="从相册选择"
+                android:textColor="#1079FF"
+                android:textSize="18sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="#C9C9CB" />
+
+            <TextView
+                android:id="@+id/btn_cancel"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#E8E8E8"
+                android:gravity="center"
+                android:text="取消"
+                android:textColor="#1079FF"
+                android:textSize="18sp" />
+        </LinearLayout>
+
     </RelativeLayout>
-</LinearLayout>
+
+</RelativeLayout>
