--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -10,17 +10,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v4.view.ViewPager>
-    <ImageView
-        android:id="@+id/welcome_tv"
-        android:layout_width="50dp"
-        android:layout_height="25dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:scaleType="fitCenter"
-        android:visibility="gone"
-        android:src="@mipmap/t1r"/>
-
+        <TextView
+            android:id="@+id/welcome_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="8dp"
+            android:textColor="@color/white"
+            android:paddingBottom="8dp"
+            android:gravity="center"
+            android:text="开 启"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="30dp"
+            android:scaleType="fitCenter"
+            android:visibility="gone"
+            android:background="@drawable/select2"/>
     <LinearLayout
         android:id="@+id/ll_viewpage_image"
         android:layout_width="wrap_content"
